Fix index exclusion behavior in snapshot restore and clone APIs
Signed-off-by: Stephen Crawford <steecraw@amazon.com>